--- a/.landscape.yml
+++ b/.landscape.yml
@@ -21,3 +21,11 @@ pep8:
     - D400
     - D401
     - D202
+
+pep257:
+    disable:
+        - D401
+        - D400
+        - D204
+        - D210
+        - D300
